<resources>
    <string name="app_name">OPENRIDER</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openrider">오픈라이더</string>
    <string name="speedmeter">속도계</string>
    <string name="searchriding">자전거 길찾기</string>
    <string name="recommend">추천 경로</string>
    <string name="riding_record">주행 기록</string>
    <string name="ranking">랭킹</string>
    <string name="friend">친구</string>
    <string name="store">스토어</string>
    <string name="sponsor">개발팀 후원하기</string>
    <string name="notice">공지사항</string>
    <string name="setting">설정</string>

    <string name="en_openrider">OPENRIDER</string>

    <string name="search_tab_child_one">최근 검색</string>
    <string name="search_tab_child_two">즐겨찾기</string>
    <string name="search_riding_store">대리점 / 매장</string>
    <string name="search_riding_bicycle">공공자전거</string>
    <string name="search_riding_convenient">편의시설</string>
    <string name="search_riding_certificate">인증센터</string>
    <string name="search_riding_child_text">지도에서 지정</string>

    <string name="recommend_riding_child_one">인기</string>
    <string name="recommend_riding_child_two">신규</string>
    <string name="recommend_riding_child_three">내주변</string>
    <string name="recommend_riding_child_four">테마</string>

    <string name="recommend_riding_child_popularity_day">일일</string>
    <string name="recommend_riding_child_popularity_week">주간</string>
    <string name="recommend_riding_child_popularity_month">월간</string>
    <string name="recommend_riding_child_popularity_accumulate">누적</string>

    <string name="search_riding_edit_hint_text">장소 / 주소 / 명칭을 입력하세요.</string>

    <string name="riding_record_my_record">내 기록</string>
    <string name="riding_record_friend_record">친구 기록</string>

    <string name="riding_ranking_distance">거리</string>
    <string name="riding_ranking_ridingtime">주행시간</string>
    <string name="riding_ranking_max_speed">최고속도</string>
    <string name="riding_ranking_average_speed">평균속도</string>

    <string name="friend_following">팔로잉</string>
    <string name="friend_follower">팔로워</string>

    <string name="friend_no_following">회원님이 팔로잉 중인 친구가 없습니다. 친구를 검색하셔서 팔로우 하시고 함께 라이딩 하세요.</string>
    <string name="friend_no_follower">회원님을 팔로잉 하는 친구가 없습니다. 친구에게 팔로우를 요청하시고 함께 라이딩하세요.</string>
    <string name="friend_input_hint">친구 이메일 주소를 입력하세요.</string>
    <string name="store_event_text">8월 신용카드 무이자 할부 행사 안내</string>
    <string name="store_event_text02">무통장 입금 계좌번호 안내</string>
    <string name="sponsor_americano">개발팀 아메리카노 사주기</string>
    <string name="sponsor_americano_content">커피 한 잔이면 밤샘은 끄떡없지요.</string>
    <string name="sponsor_hambuger">개발팀 햄버거 사주기</string>
    <string name="sponsor_hambuger_content">햄버거는 먹어도 먹어도 맛있지 말입니다.</string>
    <string name="sponsor_chicken">개발팀 치킨 사주기</string>
    <string name="sponsor_chicken_content">1인 1닭 먹고 싶습니다!</string>
    <string name="sponsor_ad">광고 보고 응원 하기</string>
    <string name="sponsor_ad_content">손 끝으로도 응원할 수 있어요!</string>

</resources>
