<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_openrider"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/openrider" />
        <item
            android:id="@+id/nav_speedmeter"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/speedmeter" />
        <item
            android:id="@+id/nav_searchriding"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/searchriding" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/recommend" />

        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/riding_record" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ranking" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/friend" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/store" />

        <item
            android:id="@+id/nav_sponsor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sponsor" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/notice" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
    </group>

</menu>
