<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.musr.openitproject.SearchRidingFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="left|top"
        android:background="@color/colorPrimary"
        android:id="@+id/linearLayout3">

        <EditText
            android:hint="@string/search_riding_edit_hint_text"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:layout_weight="5" />

        <ImageView
            android:src="@android:drawable/ic_menu_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v4.app.FragmentTabHost
            android:id="@+id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TabWidget
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4F4F4F"
                    android:id="@android:id/tabs"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@android:id/tabcontent"/>

            </LinearLayout>
        </android.support.v4.app.FragmentTabHost>


    </LinearLayout>

    <LinearLayout
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_marginRight="3dp"
            android:background="@color/color_openrider_search_btn_background"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_search_store"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/search_riding_store"
            android:id="@+id/button2"
            android:layout_weight="1" />
        <Button
            android:layout_marginRight="3dp"
            android:background="@color/color_openrider_search_btn_background"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_search_public"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/search_riding_bicycle"
            android:id="@+id/button3"
            android:layout_weight="1" />
        <Button
            android:layout_marginRight="3dp"
            android:paddingTop="2dp"
            android:background="@color/color_openrider_search_btn_background"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_search_convenient"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/search_riding_convenient"
            android:id="@+id/button4"
            android:layout_weight="1" />
        <Button
            android:paddingTop="5dp"
            android:background="@color/color_openrider_search_btn_background"
            android:textSize="10sp"
            android:drawableTop="@drawable/ic_search_auth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/search_riding_certificate"
            android:id="@+id/button5"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
